fix serialization